feat(emission-factors): remove all zone specific numbers, remove key if empty

--- a/config/zones/AO.yaml
+++ b/config/zones/AO.yaml
@@ -6,8 +6,7 @@ bounding_box:
 country: AO
 country_name: Angola
 currency: AOA
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2023 average
