--- a/config/zones/BH.yaml
+++ b/config/zones/BH.yaml
@@ -37,8 +37,7 @@ contributors:
 country: BH
 country_name: Bahrain
 currency: BHD
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2022 average
