--- a/config/zones/ET.yaml
+++ b/config/zones/ET.yaml
@@ -60,8 +60,7 @@ capacity:
 country: ET
 country_name: Ethiopia
 currency: ETB
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2023 average
