--- a/config/zones/GF.yaml
+++ b/config/zones/GF.yaml
@@ -28,8 +28,7 @@ contributors:
 country: GF
 country_name: French Guiana
 currency: EUR
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2016 average
