--- a/config/zones/MY.yaml
+++ b/config/zones/MY.yaml
@@ -85,8 +85,7 @@ country: MY
 country_name: Malaysia
 currency: MYR
 disclaimer: This zone is partially using fully estimated data from MY-EM
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
