--- a/config/zones/OM.yaml
+++ b/config/zones/OM.yaml
@@ -45,8 +45,7 @@ contributors:
 country: OM
 country_name: Oman
 currency: OMR
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2022 average
