--- a/config/zones/QA.yaml
+++ b/config/zones/QA.yaml
@@ -36,8 +36,7 @@ contributors:
 country: QA
 country_name: Qatar
 currency: QAR
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2022 average
