--- a/config/zones/AE.yaml
+++ b/config/zones/AE.yaml
@@ -98,8 +98,7 @@ contributors:
 country: AE
 country_name: United Arab Emirates
 currency: AED
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
