--- a/config/zones/BR.yaml
+++ b/config/zones/BR.yaml
@@ -18,8 +18,7 @@ contributors:
 country: BR
 country_name: Brazil
 currency: BRL
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
