--- a/config/zones/BW.yaml
+++ b/config/zones/BW.yaml
@@ -22,8 +22,7 @@ capacity:
 country: BW
 country_name: Botswana
 currency: BWP
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2023 average
