--- a/config/zones/CA-SK.yaml
+++ b/config/zones/CA-SK.yaml
@@ -33,8 +33,7 @@ contributors:
 country: CA
 country_name: Canada
 currency: CAD
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
