--- a/config/zones/CO.yaml
+++ b/config/zones/CO.yaml
@@ -129,8 +129,7 @@ country_name: Colombia
 currency: COP
 delays:
   production: 84
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
