--- a/config/zones/DZ.yaml
+++ b/config/zones/DZ.yaml
@@ -63,8 +63,7 @@ capacity:
 country: DZ
 country_name: Algeria
 currency: DZD
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2023 average
