--- a/config/zones/EG.yaml
+++ b/config/zones/EG.yaml
@@ -93,8 +93,7 @@ capacity:
 country: EG
 country_name: Egypt
 currency: EGP
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2023 average
