--- a/config/zones/ES-CE.yaml
+++ b/config/zones/ES-CE.yaml
@@ -17,8 +17,7 @@ contributors:
 country: ES
 country_name: Spain
 currency: EUR
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2022 average
