--- a/config/zones/GH.yaml
+++ b/config/zones/GH.yaml
@@ -64,8 +64,7 @@ capacity:
 country: GH
 country_name: Ghana
 currency: GHS
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2023 average
