--- a/config/zones/JP-SK.yaml
+++ b/config/zones/JP-SK.yaml
@@ -28,8 +28,7 @@ delays:
 disclaimer: The data provider (Yonden Shikoku Electric Power Co.,Inc.) provides live
   data only for solar and unknown. We are working on improving the data quality for
   this zone.
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2016 average
