--- a/config/zones/JP.yaml
+++ b/config/zones/JP.yaml
@@ -27,8 +27,7 @@ contributors:
 country: JP
 country_name: Japan
 currency: JPY
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
