--- a/config/zones/MQ.yaml
+++ b/config/zones/MQ.yaml
@@ -51,8 +51,7 @@ contributors:
 country: MQ
 country_name: Martinique
 currency: EUR
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2016 average
