--- a/config/zones/MU.yaml
+++ b/config/zones/MU.yaml
@@ -46,8 +46,7 @@ capacity:
 country: MU
 country_name: Mauritius
 currency: MUR
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2023 average
