--- a/config/zones/PH-MI.yaml
+++ b/config/zones/PH-MI.yaml
@@ -24,8 +24,7 @@ country: PH
 country_name: Philippines
 delays:
   production: 25
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
