--- a/config/zones/PH-VI.yaml
+++ b/config/zones/PH-VI.yaml
@@ -25,8 +25,7 @@ country: PH
 country_name: Philippines
 delays:
   production: 25
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
