--- a/config/zones/SZ.yaml
+++ b/config/zones/SZ.yaml
@@ -26,8 +26,7 @@ capacity:
 country: SZ
 country_name: Eswatini
 currency: SZL
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2023 average
