--- a/config/zones/TN.yaml
+++ b/config/zones/TN.yaml
@@ -53,8 +53,7 @@ capacity:
 country: TN
 country_name: Tunisia
 currency: TND
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2023 average
