--- a/config/zones/UG.yaml
+++ b/config/zones/UG.yaml
@@ -50,8 +50,7 @@ capacity:
 country: UG
 country_name: Uganda
 currency: UGX
-emissionFactors:
-  lifecycle: {}
+emissionFactors: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2023 average
