Revert "feat(emission-factors): remove all zone specific numbers, remove key if empty"
This reverts commit 25715611c420a6517f9a5911385bbd44bbd48d2f.

--- a/config/zones/AO.yaml
+++ b/config/zones/AO.yaml
@@ -6,7 +6,8 @@ bounding_box:
 country: AO
 country_name: Angola
 currency: AOA
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2023 average
