--- a/config/zones/DZ.yaml
+++ b/config/zones/DZ.yaml
@@ -63,7 +63,8 @@ capacity:
 country: DZ
 country_name: Algeria
 currency: DZD
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2023 average
