--- a/config/zones/EG.yaml
+++ b/config/zones/EG.yaml
@@ -93,7 +93,8 @@ capacity:
 country: EG
 country_name: Egypt
 currency: EGP
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2023 average
