--- a/config/zones/ET.yaml
+++ b/config/zones/ET.yaml
@@ -60,7 +60,8 @@ capacity:
 country: ET
 country_name: Ethiopia
 currency: ETB
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2023 average
