--- a/config/zones/GE.yaml
+++ b/config/zones/GE.yaml
@@ -74,6 +74,7 @@ delays:
   production: 5
 emissionFactors:
   direct: {}
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
