--- a/config/zones/IN-MH.yaml
+++ b/config/zones/IN-MH.yaml
@@ -24,6 +24,7 @@ country_name: India
 currency: INR
 emissionFactors:
   direct: {}
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
