--- a/config/zones/JP-TH.yaml
+++ b/config/zones/JP-TH.yaml
@@ -26,7 +26,8 @@ country_name: Japan
 currency: JPY
 delays:
   production: 5
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
