--- a/config/zones/MA.yaml
+++ b/config/zones/MA.yaml
@@ -73,7 +73,8 @@ contributors:
 country: MA
 country_name: Morocco
 currency: MAD
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2023 average
