--- a/config/zones/MY.yaml
+++ b/config/zones/MY.yaml
@@ -85,7 +85,8 @@ country: MY
 country_name: Malaysia
 currency: MYR
 disclaimer: This zone is partially using fully estimated data from MY-EM
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
