--- a/config/zones/NA.yaml
+++ b/config/zones/NA.yaml
@@ -18,6 +18,7 @@ country_name: Namibia
 currency: NAD
 emissionFactors:
   direct: {}
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2018 average
