--- a/config/zones/OM.yaml
+++ b/config/zones/OM.yaml
@@ -45,7 +45,8 @@ contributors:
 country: OM
 country_name: Oman
 currency: OMR
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2022 average
