--- a/config/zones/PF.yaml
+++ b/config/zones/PF.yaml
@@ -36,6 +36,7 @@ country_name: French Polynesia
 currency: XPF
 emissionFactors:
   direct: {}
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2021 average
