--- a/config/zones/PH.yaml
+++ b/config/zones/PH.yaml
@@ -20,7 +20,8 @@ contributors:
 country: PH
 country_name: Philippines
 currency: PHP
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
