--- a/config/zones/RE.yaml
+++ b/config/zones/RE.yaml
@@ -59,6 +59,7 @@ country_name: "R\xE9union"
 currency: EUR
 emissionFactors:
   direct: {}
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2016 average
