--- a/config/zones/AE.yaml
+++ b/config/zones/AE.yaml
@@ -98,7 +98,8 @@ contributors:
 country: AE
 country_name: United Arab Emirates
 currency: AED
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
