--- a/config/zones/AM.yaml
+++ b/config/zones/AM.yaml
@@ -74,6 +74,7 @@ country_name: Armenia
 currency: AMD
 emissionFactors:
   direct: {}
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2019 average
