--- a/config/zones/AU-NT.yaml
+++ b/config/zones/AU-NT.yaml
@@ -20,7 +20,8 @@ delays:
   production: 96
 disclaimer: The Northern Territory power grid is not connected to the (Australian)
   National Electricity Market or Western Australia's grid.
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
