--- a/config/zones/AU.yaml
+++ b/config/zones/AU.yaml
@@ -33,7 +33,8 @@ contributors:
 country: AU
 country_name: Australia
 currency: AUD
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
