--- a/config/zones/AW.yaml
+++ b/config/zones/AW.yaml
@@ -29,6 +29,7 @@ country_name: Aruba
 currency: AWG
 emissionFactors:
   direct: {}
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2018 average
