--- a/config/zones/BB.yaml
+++ b/config/zones/BB.yaml
@@ -29,7 +29,8 @@ capacity:
 country: BB
 country_name: Barbados
 currency: BBD
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2024 average
