--- a/config/zones/BD.yaml
+++ b/config/zones/BD.yaml
@@ -119,7 +119,8 @@ country_name: Bangladesh
 currency: BDT
 delays:
   production: 10
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
