--- a/config/zones/BH.yaml
+++ b/config/zones/BH.yaml
@@ -37,7 +37,8 @@ contributors:
 country: BH
 country_name: Bahrain
 currency: BHD
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2022 average
