--- a/config/zones/BR-NE.yaml
+++ b/config/zones/BR-NE.yaml
@@ -34,6 +34,7 @@ disclaimer: Unknown production is the aggregation of thermal production, mainly 
   coal and oil.
 emissionFactors:
   direct: {}
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
