--- a/config/zones/BR.yaml
+++ b/config/zones/BR.yaml
@@ -18,7 +18,8 @@ contributors:
 country: BR
 country_name: Brazil
 currency: BRL
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
