--- a/config/zones/ES-CE.yaml
+++ b/config/zones/ES-CE.yaml
@@ -17,7 +17,8 @@ contributors:
 country: ES
 country_name: Spain
 currency: EUR
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2022 average
