--- a/config/zones/GF.yaml
+++ b/config/zones/GF.yaml
@@ -28,7 +28,8 @@ contributors:
 country: GF
 country_name: French Guiana
 currency: EUR
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2016 average
