--- a/config/zones/GP.yaml
+++ b/config/zones/GP.yaml
@@ -17,7 +17,8 @@ contributors:
 country: GP
 country_name: Guadeloupe
 currency: EUR
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2016 average
