--- a/config/zones/ID.yaml
+++ b/config/zones/ID.yaml
@@ -22,6 +22,7 @@ disclaimer: Real-time consumption and generation mix data is not available and i
   fully estimated.
 emissionFactors:
   direct: {}
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
