--- a/config/zones/IN-PB.yaml
+++ b/config/zones/IN-PB.yaml
@@ -21,6 +21,7 @@ country_name: India
 currency: INR
 emissionFactors:
   direct: {}
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
