--- a/config/zones/JP-CG.yaml
+++ b/config/zones/JP-CG.yaml
@@ -24,7 +24,8 @@ country_name: Japan
 currency: JPY
 delays:
   production: 5
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
