--- a/config/zones/JP-HR.yaml
+++ b/config/zones/JP-HR.yaml
@@ -27,7 +27,8 @@ delays:
 disclaimer: The data provider (Hokuriku Electric Power Co.,Inc.) provides live data
   only for solar and unknown. We are working on improving the data quality for this
   zone.
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
