--- a/config/zones/JP-ON.yaml
+++ b/config/zones/JP-ON.yaml
@@ -22,7 +22,8 @@ country_name: Japan
 currency: JPY
 delays:
   production: 5
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
