--- a/config/zones/LK.yaml
+++ b/config/zones/LK.yaml
@@ -90,7 +90,8 @@ country_name: Sri Lanka
 currency: LKR
 delays:
   production: 30
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
