--- a/config/zones/MQ.yaml
+++ b/config/zones/MQ.yaml
@@ -51,7 +51,8 @@ contributors:
 country: MQ
 country_name: Martinique
 currency: EUR
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2016 average
