--- a/config/zones/MY-WM.yaml
+++ b/config/zones/MY-WM.yaml
@@ -18,6 +18,7 @@ delays:
   production: 5
 emissionFactors:
   direct: {}
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
