--- a/config/zones/MZ.yaml
+++ b/config/zones/MZ.yaml
@@ -38,7 +38,8 @@ capacity:
 country: MZ
 country_name: Mozambique
 currency: MZN
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2023 average
