--- a/config/zones/NZ.yaml
+++ b/config/zones/NZ.yaml
@@ -101,6 +101,7 @@ delays:
   production: 6
 emissionFactors:
   direct: {}
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
