--- a/config/zones/PE.yaml
+++ b/config/zones/PE.yaml
@@ -129,6 +129,7 @@ delays:
   production: 22
 emissionFactors:
   direct: {}
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
