--- a/config/zones/PH-MI.yaml
+++ b/config/zones/PH-MI.yaml
@@ -24,7 +24,8 @@ country: PH
 country_name: Philippines
 delays:
   production: 25
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
