--- a/config/zones/QA.yaml
+++ b/config/zones/QA.yaml
@@ -36,7 +36,8 @@ contributors:
 country: QA
 country_name: Qatar
 currency: QAR
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2022 average
