--- a/config/zones/SG.yaml
+++ b/config/zones/SG.yaml
@@ -86,6 +86,7 @@ delays:
   production: 5
 emissionFactors:
   direct: {}
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
