--- a/config/zones/SZ.yaml
+++ b/config/zones/SZ.yaml
@@ -26,7 +26,8 @@ capacity:
 country: SZ
 country_name: Eswatini
 currency: SZL
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2023 average
