--- a/config/zones/TN.yaml
+++ b/config/zones/TN.yaml
@@ -53,7 +53,8 @@ capacity:
 country: TN
 country_name: Tunisia
 currency: TND
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2023 average
