--- a/config/zones/UG.yaml
+++ b/config/zones/UG.yaml
@@ -50,7 +50,8 @@ capacity:
 country: UG
 country_name: Uganda
 currency: UGX
-emissionFactors: {}
+emissionFactors:
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2023 average
