--- a/config/zones/UY.yaml
+++ b/config/zones/UY.yaml
@@ -68,6 +68,7 @@ delays:
   production: 7
 emissionFactors:
   direct: {}
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
