--- a/config/zones/XK.yaml
+++ b/config/zones/XK.yaml
@@ -28,6 +28,7 @@ delays:
   production: 8
 emissionFactors:
   direct: {}
+  lifecycle: {}
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
