Initial Nix Python setup

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ include = [
 ]
 
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling", "editables"]
 build-backend = "hatchling.build"
 
 
